18 October 2023: George
	- Mailing list patches from Daniel Gröber for DNS64 fallback to plain
	  AAAA when no A record exists for synthesis, and minor DNS64 code
	  refactoring for better readability.
	- Fixes for the DNS64 patches.
	- Update the dns64_lookup.rpl test for the DNS64 fallback patch.
	- Merge #955 from buevsan: fix ipset wrong behavior.
	- Update testdata/ipset.tdir test for ipset fix.

17 October 2023: Wouter
	- Fix #954: Inconsistent RPZ handling for A record returned along with
	  CNAME.

16 October 2023: George
	- Expose the script filename in the Python module environment 'mod_env'
	  instead of the config_file structure which includes the linked list
	  of scripts in a multi Python module setup; fixes #79.
	- Expose the configured listening and outgoing interfaces, if any, as
	  a list of strings in the Python 'config_file' class instead of the
	  current Swig object proxy; fixes #79.
	- For multi Python module setups, clean previously parsed module
	  functions in __main__'s dictionary, if any, so that only current
	  module functions are registered.

13 October 2023: George
	- Better fix for infinite loop when reading multiple lines of input on
	  a broken remote control socket, by treating a zero byte line the
	  same as transmission end. Addesses #947 and #948.

12 October 2023: Wouter
	- Merge #944: Disable EDNS DO.
	  Disable the EDNS DO flag in upstream requests. This can be helpful
	  for devices that cannot handle DNSSEC information. But it should not
	  be enabled otherwise, because that would stop DNSSEC validation. The
	  DNSSEC validation would not work for Unbound itself, and also not
	  for downstream users. Default is no. The option
	  is disable-edns-do: no

11 October 2023: George
	- Fix #850: [FR] Ability to use specific database in Redis, with new
	  redis-logical-db configuration option.

11 October 2023: Wouter
	- Fix #949: "could not create control compt".