@@ -1,3 +1,7 @@
+19 October 2023: Wouter
+	- Fix to print detailed errors when an SSL IO routine fails via
+	  SSL_get_error.
+
 18 October 2023: George
 	- Mailing list patches from Daniel Gröber for DNS64 fallback to plain
 	  AAAA when no A record exists for synthesis, and minor DNS64 code
